5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3161/executions/1635_1053.log
== TEST (2019-04-08 14:32:01) 
-- CODE:
n= input("insira o nome do patrono:")
if (n == "cervo"):
   print ("eh patrono do Harry Portter")
else:	
	print("nao eh patrono do Harry Potter")
	
-- OUTPUT:
eh patrono do Harry Portter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:32:09) 
-- CODE:
n= input("insira o nome do patrono:")
if (n == "cervo"):
   print ("eh patrono do Harry Portter")
else:	
	print("nao eh patrono do Harry Potter")
	
-- EXECUTION TIME:
0.142653
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
eh patrono do Harry Portter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:32:28) 
-- CODE:
n= input("insira o nome do patrono:")
if (n == "cervo"):
   print ("eh patrono do Harry Portter")
else:	
	print(n + "nao eh patrono do Harry Potter")
	
-- OUTPUT:
eh patrono do Harry Portter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:32:34) 
-- CODE:
n= input("insira o nome do patrono:")
if (n == "cervo"):
   print ("eh patrono do Harry Portter")
else:	
	print(n + "nao eh patrono do Harry Potter")
	
-- OUTPUT:
eh patrono do Harry Portter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:32:38) 
-- CODE:
n= input("insira o nome do patrono:")
if (n == "cervo"):
   print ("eh patrono do Harry Portter")
else:	
	print(n + "nao eh patrono do Harry Potter")
	
-- EXECUTION TIME:
0.137926
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
eh patrono do Harry Portter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:34:07) 
-- CODE:
n= input("insira o nome do patrono:")
if (n == "cervo"):
   print ("eh patrono do Harry Portter")
else:	
	print("nao eh patrono do Harry Potter")
	
-- OUTPUT:
eh patrono do Harry Portter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:34:37) 
-- CODE:
n= input("insira o nome do patrono:")
if (n == "cervo"):
   print ("eh patrono do Harry Portter")
else:	
	print(" n + nao eh patrono do Harry Potter")
	
-- EXECUTION TIME:
0.143896
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
eh patrono do Harry Portter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
n + nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:34:40) 
-- CODE:
n= input("insira o nome do patrono:")
if (n == "cervo"):
   print ("eh patrono do Harry Portter")
else:	
	print(" n + nao eh patrono do Harry Potter")
	
-- OUTPUT:
eh patrono do Harry Portter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:34:58) 
-- CODE:
n= input("insira o nome do patrono:")
if (n == "cervo"):
   print ("eh patrono do Harry Portter")
else:	
	print(n + "nao eh patrono do Harry Potter")
	
-- OUTPUT:
eh patrono do Harry Portter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:36:37) 
-- CODE:
n= input("insira o nome do patrono:")
if (n != "cervo"):
   print (n + " nao eh patrono do Harry Portter")
else:	
	print( "eh patrono do Harry Potter")
	
-- OUTPUT:
eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:36:46) 
-- CODE:
n= input("insira o nome do patrono:")
if (n != "cervo"):
   print (n + " nao eh patrono do Harry Portter")
else:	
	print( "eh patrono do Harry Potter")
	
-- EXECUTION TIME:
0.112807
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Portter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:36:47) 
-- CODE:
n= input("insira o nome do patrono:")
if (n != "cervo"):
   print (n + " nao eh patrono do Harry Portter")
else:	
	print( "eh patrono do Harry Potter")
	
-- OUTPUT:
eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:41:20) 
-- CODE:
n= input("insira o nome do patrono:")
if (n != "cervo"):
   print (n + " nao eh patrono do Harry Portter")
else:	
	print( "eh patrono do Harry Potter")
	
-- EXECUTION TIME:
0.141498
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Portter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:41:22) 
-- CODE:
n= input("insira o nome do patrono:")
if (n != "cervo"):
   print (n + " nao eh patrono do Harry Portter")
else:	
	print( "eh patrono do Harry Potter")
	
-- OUTPUT:
eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:15:32) 
-- CODE:
x= input("digite")
if (x == "cervo"):
	mensagem: "cervo eh patrono de Harry Potter"
else:
	mensagem = x + "nao eh patrono de Harry POtter"
print(mensagem)
-- EXECUTION TIME:
0.138794
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 3
    mensagem: "cervo eh patrono de Harry Potter"
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:15:34) 
-- CODE:
x= input("digite")
if (x == "cervo"):
	mensagem: "cervo eh patrono de Harry Potter"
else:
	mensagem = x + "nao eh patrono de Harry POtter"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:15:43) 
-- CODE:
x= input("digite")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x + "nao eh patrono de Harry POtter"
print(mensagem)
-- EXECUTION TIME:
0.198439
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
digitecervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
digitebodenao eh patrono de Harry POtter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:15:47) 
-- CODE:
x= input("digite")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x + "nao eh patrono de Harry POtter"
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:16:10) 
-- CODE:
x= input("digite:")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x + "nao eh patrono de Harry POtter"
print(mensagem)
-- EXECUTION TIME:
0.149803
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono de Harry POtter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:16:38) 
-- CODE:
x= input("digite:")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x + "nao eh patrono de Harry POtter"
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:16:47) 
-- CODE:
x= input("digite:")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x  + "nao eh patrono de Harry POtter"
print(mensagem)
-- EXECUTION TIME:
0.155446
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono de Harry POtter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:17:00) 
-- CODE:
x= input("digite:")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x  + "nao eh patrono de Harry POtter"
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:17:06) 
-- CODE:
x= input("digite:")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x  + "nao eh patrono de Harry POtter"
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:17:17) 
-- CODE:
x= input("digite:")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x  +  "nao eh patrono de Harry POtter"
print(mensagem)
-- EXECUTION TIME:
0.187853
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono de Harry POtter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:20:17) 
-- CODE:
x= input("digite:")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x  +  "nao eh patrono de Harry POtter"
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:20:35) 
-- CODE:
x= input("digite:")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x  +  " nao eh patrono de Harry POtter "
print(mensagem)
-- EXECUTION TIME:
0.204562
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry POtter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:20:36) 
-- CODE:
x= input("digite:")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x  +  " nao eh patrono de Harry POtter "
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:20:46) 
-- CODE:
x= input("digite:")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x  +  " nao eh patrono de Harry Potter "
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:20:52) 
-- CODE:
x= input("digite:")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x  +  " nao eh patrono de Harry Potter "
print(mensagem)
-- EXECUTION TIME:
0.133915
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:20:55) 
-- CODE:
x= input("digite:")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x  +  " nao eh patrono de Harry Potter "
print(mensagem)
-- EXECUTION TIME:
0.110301
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:20:59) 
-- CODE:
x= input("digite:")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x  +  " nao eh patrono de Harry Potter "
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:22:00) 
-- CODE:
x= input("digite:")
if (x == "cervo"):
	mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = x  +  " nao eh patrono de Harry Potter "
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:22:14) 
-- CODE:
x= input("digite:")
if (x == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = x  +  " nao eh patrono do Harry Potter "
print(mensagem)
-- EXECUTION TIME:
0.143605
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
